additional translations; revisions in anticipation of 2nd edition

--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -628,7 +628,7 @@
     "Rank.lieutenant.name": "Лейтенант",
     "Rank.lieutenant.abbrev": "Лт.",
 
-    "Rank.lieutenantJG.name": "Младщий Лейтенант",
+    "Rank.lieutenantJG.name": "Младший Лейтенант",
     "Rank.lieutenantJG.abbrev": "Мл.Лт.",
 
     "Rank.ensign.name": "Энсин",
@@ -698,7 +698,7 @@
     "Role.flightController.description": "Не самая типичная для старших офицеров должность. Некоторые капитаны, особенно действующие\n в неизведанном космосе, назначают старшим офицером также главного рулевого или офицера-навигатора.",
 
     "Role.shipsCounselor": "Корабельный советник",
-    "Role.shipsCounselor,description": "На больших кораблях и звёздных базах есть\n персонал, занимающийся психологической поддержкой. Некоторые капитаны считают их ценными советниками, поскольку их обучение охватывает как\n культуру, так и психологию, что позволяет им точно\n считывать чужие настроения и намерения.",
+    "Role.shipsCounselor,description": "На больших кораблях и звёздных базах есть персонал, занимающийся психологической поддержкой. Некоторые капитаны считают их ценными советниками, поскольку их обучение охватывает как культуру, так и психологию, что позволяет им точно считывать чужие настроения и намерения.",
     "Role.communicationsOfficer": "Офицер связи",
 
     "Role.communicationsOfficer.description": "Чаще встречающиеся в более ранние годы существования Звёздного флота узкоспециализированные офицеры связи владеют языками\n и криптографией, используют передовые технологии\n перевода и расшифровки и важны как при встрече с новыми, так и с враждебными цивилизациями.",
@@ -791,6 +791,7 @@
     "Species.denobulan.traitDescription": "Денобуланцы обладают крепкой иммунной\nсистемой, но уязвимы к различным формам радиационного поражения. Они от природы опытные скалолазы и могут взбираться по отвесным стенам, как некоторые из земных ящериц. У денобуланцев нет потребности во сне, но им нужно каждый год впадать в спячку на несколько дней, иначе они станут дезориентированы.",
 
     "Species.elAurian.name": "Эль-Урианин",
+    "Species.elAurian.exampleValue": "Я тебе сказал, я слушаю",
 
     "Species.ferengi.name": "Ферренги",
 
@@ -822,6 +823,8 @@
     "Species.orion.name": "Орионец",
 
     "Species.romulan.name": "Ромулианец",
+    "Species.romulan.description": "Ромуланцы похожи, но идентичны вулканцам. Имеют общих предков, хотя и не переняли стоицизм и логику своих кузенов. Скорее, ромуланцы - жестокие и безжалостные люди, быстро впадающие в гнев и легко поддающиеся эмоциям. Культура воинской дисциплины, кажется, заставляет их худших членов общества стремиться к полезным целям. Хотя паранойя и личный интерес мотивируют ромуланскую политику в такой же степени, как и стремление к коллективной выгоде. Временами кажется, что единственное, что удерживает Ромуланскую Звездную Империю вместе, это тот факт, что они презирают другие виды больше, чем друг друга.",
+    "Species.romulan.traitDescription": "Ромуланская физиология существенно не отличается от вулканской, хотя у части ромуланских видов наблюдается V-образный гребень лба, которого нет у вулканцев. Самая большая разница заключается в том, что ромуланцам не хватает строгой ментальной дисциплины, свойственной вулканцам. В психологическом и культурном отношении ромуланцы ценят хитрость и силу воли, и не доверяют другим расам: это отношение взаимно, поскольку ромуланцы имеют репутацию манипулистов, обманщиков и предателей.",
 
     "Species.suliban.name": "Сулибан",
 
@@ -1020,6 +1023,22 @@
     "Talent.fastTargetingSystems": "Системы быстрого наведения",
 
     "Talent.fastTargetingSystems.soloDescription": "Системы прицеливания звездолёта могут наводить оружие намного быстрее и точнее, чем у других кораблей этого класса, что обеспечивает перевес в бою.",
+
+    "Talent.firstResponse": "Помощь на передовой",
+
+    "Talent.firstResponse.description": "При Оказании первой помощи во время Сражения вы получаете бонусный d20 и можете использовать правило «Цена успеха», при этом любое Осложнение даёт +1 к сложности дальнейшего Лечения раненого.",
+
+    "Talent.doctorsOrders": "Приказ врача",
+
+    "Talent.doctorsOrders.description": "Выполняя Задачу по координации действий союзников или принуждению кого-то сделать/не сделать что-то, можно использовать Медицину вместо Командования.",
+
+    "Talent.triage": "Первичный осмотр",
+
+    "Talent.triage.description": "Выполняя Задачу по определению травм, болезней или тяжести состояния, можно сбросить 1 жетон Импульса (Повторное применение) для диагностики ещё одного пациента.",
+
+    "Talent.quickStudy": "Быстрое изучение",
+
+    "Talent.quickStudy.description": "Сложность выполняемой Задачи не возрастает при применении незнакомой вашему ПИ процедуры или при лечении существа неизвестного вида.",
 
     "Talent.fieldMedicine": "Полевая медицина",
 
