--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -519,9 +519,18 @@
 
     "Environment.special.name": "{{name}} ({{species}})",
 
-    "Division.command": "Командныая",
+    "Division.command": "Командная",
     "Division.science": "Оперативная",
     "Division.operations": "Научная",
+
+    "Equipment.uniform": "Униформа",
+    "Equipment.clothing": "Одежда",
+    "Equipment.armor": "Броня",
+    "Equipment.communicator": "Коммуникатор",
+    "Equipment.tricorder": "Трикодер",
+    "Equipment.medKit": "Медицинский набор",
+    "Equipment.engineeringKit": "Набор инженера",
+    "Equipment.ushaanTor": "Ледокол Ушаан-Тор",
 
     "Era.name.enterprise": "Энтерпрайз (22й век)",
     "Era.name.originalSeries": "Оригинальные серии (23й век)",
@@ -614,6 +623,17 @@
     "HairType.bald": "Лысый",
     "HairType.bowlCutHair": "Под горшой",
 
+    "ModificationType.name.reputation": "Репутация",
+    "ModificationType.name.promotion": "Повышение",
+    "ModificationType.name.milestone": "Веха",
+
+    "MilestoneType.name.normalMilestone": "Обычная веха",
+    "MilestoneType.name.spotlightMilestone": "Центральная веха",
+    "MilestoneType.name.arcMilestone": "Сюжетная веха",
+
+    "MissionPod.sensors": "Сенсоры",
+    "MissionPod.weapons": "Вооружение",
+
     "NasoLabialFoldType.none": "Отсуствует",
 
     "Rank.captain.name": "Капитан",
@@ -665,6 +685,15 @@
     "Rank.crewman3rdClass.name": "Матрос 3й статьи",
     "Rank.crewman3rdClass.abbrev": "матр.",
 
+    "Rank.sergeant.name": "Сержант",
+    "Rank.sergeant.abbrev": "серж.",
+
+    "Rank.corporal.name": "Капрал",
+    "Rank.corporal.abbrev": "капр.",
+
+    "Rank.private.name": "Рядовой",
+    "Rank.private.abbrev": "ряд.",
+
     "Role.commandingOfficer": "Командир",
 
     "Role.commandingOfficer.description": "Капитан.\nДаже если командир не в звании капитана, подчинённые будут называть его капитаном. Командир должен быть у каждого корабля.",
@@ -687,18 +716,20 @@
 
     "Role.chiefMedicalOfficer": "Главный медицинский офицер",
 
-    "Role.chiefMedicalOfficer.description": "Главный медицинский офицер, также\n судовой хирург или главный врач; отвечает за здоровье и благополучие экипажа и других лиц, находящихся на борту, и руководит медицинской службой. Может\n приказывать старшим офицерам и отменять их приказы, если речь идёт об их здоровье.",
+    "Role.chiefMedicalOfficer.description": "Главный медицинский офицер, также судовой хирург или главный врач; отвечает за здоровье и благополучие экипажа и других лиц, находящихся на борту, и руководит медицинской службой. Может приказывать старшим офицерам и отменять их приказы, если речь идёт об их здоровье.",
 
     "Role.scienceOfficer": "Научный офицер",
 
-    "Role.scienceOfficer.description": "Отвечает за консультирование командира по всем научным\n вопросам и предоставляет гипотезы о неизвестных\n явлениях. Не на всех кораблях есть специальный научный офицер, и часто его обязанности выполняет\n глава оперативной службы.",
+    "Role.scienceOfficer.description": "Отвечает за консультирование командира по всем научным вопросам и предоставляет гипотезы о неизвестных  явлениях. Не на всех кораблях есть  специальный научный офицер, и часто его обязанности выполняет глава оперативной службы.",
 
     "Role.flightController": "Главный навигатор",
 
     "Role.flightController.description": "Не самая типичная для старших офицеров должность. Некоторые капитаны, особенно действующие\n в неизведанном космосе, назначают старшим офицером также главного рулевого или офицера-навигатора.",
 
     "Role.shipsCounselor": "Корабельный советник",
-    "Role.shipsCounselor,description": "На больших кораблях и звёздных базах есть персонал, занимающийся психологической поддержкой. Некоторые капитаны считают их ценными советниками, поскольку их обучение охватывает как культуру, так и психологию, что позволяет им точно считывать чужие настроения и намерения.",
+
+    "Role.shipsCounselor.description": "На больших кораблях и звёздных базах есть персонал, занимающийся психологической поддержкой. Некоторые капитаны считают их ценными советниками, поскольку их обучение охватывает как культуру, так и психологию, что позволяет им точно считывать чужие настроения и намерения.",
+
     "Role.communicationsOfficer": "Офицер связи",
 
     "Role.communicationsOfficer.description": "Чаще встречающиеся в более ранние годы существования Звёздного флота узкоспециализированные офицеры связи владеют языками\n и криптографией, используют передовые технологии\n перевода и расшифровки и важны как при встрече с новыми, так и с враждебными цивилизациями.",
@@ -715,6 +746,7 @@
     "Source.type.unofficial": "Неофициальные ресурсы",
 
     "Source.book.core": "Основная книга",
+    "Source.book.core2ndEdition": "Основная (2 изд.)",
     "Source.book.alphaQuadrant": "Альфа Квадрант",
     "Source.book.betaQuadrant": "Бета Квадрант",
     "Source.book.gammaQuadrant": "Гамма Квадрант",
@@ -727,6 +759,9 @@
     "Source.book.discoveryCampaign": "Кампания Дискавери",
     "Source.book.captainsLog": "Дневник Капитана",
 
+    "Spaceframe.akira": "Класс Акира",
+    "Spaceframe.nova": "Класс Нова",
+
     "Specialization.admiral": "Адмирал",
     "Specialization.admin": "Специалист",
     "Specialization.conn": "Пилот",
@@ -738,17 +773,24 @@
     "Specialization.hangarDeck": "Ангарная палуба для шаттлов",
     "Specialization.intelligenceOfficer": "Офицер разведки",
     "Specialization.klingonWarrior": "Клингон-воин",
+    "Specialization.medicalDoctor": "Врач",
     "Specialization.nurse": "Медсестра",
     "Specialization.scienceTech": "Научный техник",
     "Specialization.security": "Безоапсник",
     "Specialization.starfleetScientist": "Ученый",
 
     "Species.aenar.name": "Аэнар",
+    "Species.aenar.aboutNames": "У Аэнар обычно одно имя, поскольку их обостренные чувства позволяют им различать двух людей с одинаковым именем на основе частоты их голоса, сердцебиения и других физиологических особенностей.",
+    "Species.aenar.description": "Ответвление андорианцев, аэнарцы - телепатическая раса, недостаток зрения которых компенсируется их обостренными чувствами и телепатическими способностями. Когда-то считавшиеся мифом, аэнарцы предпочитают одиночество и живут в защищенных сообществах вдали от своих собратьев-андорианцев. Хотя их немного, аэнар высоко ценятся за свои сенсорные способности. Андорианское правительство предоставило им некоторую степень суверенитета в решении своих собственных дел. В то время как большинство предпочитает оставаться на полярных ледниках своей родной планеты, некоторые Аэнар покинули Андорию, чтобы продолжить карьеру в Звездном Флоте или заняться другими делами. Известные своим увлечением технологиями, некоторые из них впоследствии стали ценными инженерами.",
     "Species.aenar.exampleValue": "Потребности в насилии никогда не существует",
+    "Species.aenar.soloDescription": "Аэнар - подвид андорианцев, находившийся на грани исчезновения к середине 22 века. У них было две антенны и отсутствовала пигментация кожи и волос. Их самой отличительной чертой были телепатические способности, которые включали чтение мыслей и психическое проецирование себя в разум других гуманоидов.",
     "Species.aenar.trait": "Андорианец, Аэнар",
+    "Species.aenar.traitDescription": "Несмотря на то, что биологически они похожи на андорианцев, Аэнар развили собственную культуру и способности, которые отличают их от своих собратьев. Хотя многие считают, что у них нет способности видеть препятствие, аэнары обладают чувствами, которые позволяют им читать текст пальцами и способны определять расстояния в зависимости от того, насколько далеко для них что-то звучит. Их телепатические способности делают их высоко ценимыми и среди других видов, а с технологической помощью некоторые из них способны проецировать свои мысли на огромные расстояния. У некоторых Эйнаров сардонический взгляд на мир, в то время как другие, кажется, полны бесконечного любопытства по поводу того, что они могут испытать за пределами своих коммун.",
 
     "Species.andorian.name": "Андорианец",
+    "Species.andorian.aboutNames": "Имена АНДОРИАНЦЕВ, как правило, звучат достаточно резко и состоят из личного и кланового имён. Среди некоторых андорианцев принято начинать клановое имя с гендерной приставки: «ж» или «ш» для женщин и «ч» или «т» для мужчин. Этот префикс ставится перед фамилией и отделяется апострофом. Длинные или сложные андорианские имена обычно укорачиваются, особенно при общении с другими видами.",
     "Species.andorian.description": "Агрессивный и пылкий народ с замороженной луны Андории. Андорианцы входят в состав Объединённой Федерации Планет с момента её основания; до этого они несколько лет были надёжными союзниками человечества. Их неповторимый облик отличает голубая кожа, бледные волосы и антенны. Хотя Андорианская\nИмперская Гвардия была распущена при создании Федерации, они до сих пор сохраняют сильные военные традиции и обычай ритуальных дуэлей чести, известных как «ушаан» или «юшаан», в которых используются ручные ледорубы.",
+    "Species.andorian.soloDescription": "Агрессивный и пылкий народ с замороженной луны Андории. Андорианцы входят в состав Объединённой Федерации Планет с момента её основания; до этого они несколько лет были надёжными союзниками человечества. Их неповторимый облик отличает голубая кожа, бледные волосы и антенны. Хотя Андорианская Имперская Гвардия была распущена при создании Федерации, они до сих пор сохраняют сильные военные традиции и обычай ритуальных дуэлей чести, известных как «ушаан» или «юшаан», в которых используются ручные ледорубы.",
     "Species.andorian.exampleValue": "Гордый/ая сын/дочь Андории",
     "Species.andorian.traitDescription": "Эта Черта снижает сложность Задач сопро-\nтивлению экстремальному холоду или Задач, на которые влияет чрезвычайно низкая температура. Антенны помогают андорианцам держать равновесие и ориентироваться в пространстве, а лишившийся антенны андорианец может сильно ослабеть, пока этот орган не отрастёт заново. У них быстрый метаболизм, то есть, среди прочего, они устают быстрее, чем люди; это также означает, что андорианцы уязвимы к инфекциям при некоторых видах травм. До создания Федерации андорианцы и вулканцы вели многочисленные споры и хотя эти вопросы во многом относятся к древней истории, они до сих пор не всегда ладят друг с другом.",
 
@@ -759,9 +801,10 @@
     "Species.aurelian.name": "Аурелиан",
 
     "Species.bajoran.name": "Баджорец",
-    "Species.bajoran.aboutNames": "Имена БАДЖОРЦЕВ начинаются с фамилии. Личные имена короткие (редко больше двух слогов), и звучат мягко и мелодично. На Баджоре матриархальные традиции и дети берут фамилию матери.\nПример: Реил Йеса (жен), Латара Гел (муж)",
+    "Species.bajoran.aboutNames": "Имена баджорцев начинаются с фамилии. Личные имена короткие (редко больше двух слогов), и звучат мягко и мелодично. На Баджоре матриархальные традиции и дети берут фамилию матери.\nПример: Реил Йеса (жен), Латара Гел (муж)",
     "Species.bajoran.description": "Религиозный и бесстрашный вид с планеты Баджор. Баджорцы многое потеряли после десятилетий оккупации Кардассианским Союзом. Многие баджорцы рассеялись по Альфа-квадранту во время оккупации, а те, кто остался на Баджоре, часто действовали как мятежники или томились в трудовых лагерях, управляемых кардассианцами. Оккупация закончилась несколько лет назад, но шрамы, которые она оставила, будут заживать не одно поколение. Баджор не является членом Федерации, но многие представители рассеянной по Галактике баджорской диаспоры смогли пробиться в Звёздный флот. В баджорской культуре сильна вера в Пророков - небесных существ, которые, как говорят, наблюдали за планетой на протяжении тысячелетий. Современные религиозные доктрины гласят, что Баджорская червоточина -\nэто Небесный храм Пророков.",
     "Species.bajoran.exampleValue": "Вера в Пророков",
+    "Species.bajoran.soloDescription": "Религиозный, бесстрашный народ, пострадавший от кардассианской оккупации. Они поклоняются небесным существам, обитающим в баджорской червоточине. Внешне они очень похожи на людей, с выступами на носу и часто носят замысловатую серьгу на правом ухе.",
     "Species.bajoran.traitDescription": "По очевидным причинам баджорцы склонны\nвраждебно относиться к кардассианцам и с неприязнью относиться к тем, кто равнодушен к страданиям баджорского народа или закрывает на них глаза. Хотя не все баджорцы в одинаковой степени духовны или религиозны, большинство из них понимают культурное значение Пророков для баджорского общества.",
 
     "Species.barzan.name": "Барзанец",
@@ -772,9 +815,11 @@
     "Species.betazoid.aboutNames": "У имён БЕТАЗОИДОВ обычно как минимум два слога и мелодичное звучание, а фамилия следует за личным именем и часто звучит грубее. У бетазоидов матриархальные традиции и дети берут фамилию матери.",
     "Species.betazoid.description": "Мирные бетазоиды родом с идиллической зелёной планеты Бетазед. Этот мир - ценный член Федерации, его представителей можно встретить по всей территории Федерации и в Звёздном флоте. Внешне бетазоиды практически идентичны людям, но у них есть одно серьёзное отличие: природная телепатия, которая проявляется в подростковом возрасте. Сила этой способности варьируется от индивида к индивиду, но благодаря ей появилась их культура, в которой честность и откровенность имеют фундаментальное значение: трудно хранить секреты, когда все вокруг могут читать мысли.",
     "Species.betazoid.exampleValue": "Сострадание через понимание",
+    "Species.betazoid.soloDescription": "Бетазоиды кажутся почти идентичными людям, но отличаются в одном важном отношении: они от природы телепатичны и развивают ментальные способности в подростковом возрасте. Все бетазоиды в разной степени владеют телепатией и отлично понимают состояние окружающих, даже если не используют свои способности активно. Но это также делает их крайне чувствительными к телепатическому воздействию и психическим атакам. Благодаря культуре открытости и способности читать чужие мысли и эмоции бетазоиды мало знают о лжи и обмане. Поскольку они чувствительны к разумам других живых существ, то, как правило, чувствуют себя неуютно рядом с животными из-за страха раствориться в сознании дикого существа.",
     "Species.betazoid.traitDescription": "Все бетазоиды в разной степени владеют телепатией и отлично понимают состояние окружающих, даже если не используют свои способности активно. Но это также делает их крайне чувствительными к телепатическому воздействию и психическим атакам. Благодаря культуре открытости и способности читать чужие мысли и эмоции бетазоиды мало знают о лжи и обмане. Поскольку они чувствительны к разумам других живых существ, то, как правило, чувствуют себя неуютно рядом с животными из-за страха раствориться в сознании дикого существа.",
 
     "Species.bolian.name": "Болианец",
+    "Species.bolian.soloDescription": "Отличаются хрящевым гребнем, который проходит вертикально вниз по голове, от центра лица к груди, цвет кожи варьируется от светло-голубого до темно-зеленого и приглушенного пурпурного цвета с более темными полосами на голове. Они преимущественно лысые, хотя известно, что у некоторых женщин есть волосы. Болианцы - понимающие, гостеприимные существа, часто идущие вперед в своих обязанностях по работе с клиентами или на дипломатической службе.",
 
     "Species.borg.name": "Борг",
 
@@ -788,6 +833,7 @@
     "Species.denobulan.aboutNames": "У ДЕНОБУЛАНЦЕВ, как правило, одно имя, так как денобуланец может быть частью нескольких связанных семейств. Однако некоторые денобуланцы могут использовать имя одного из супругов в качестве импровизированной фамилии. Это чаще всего делается, чтобы показать семейную связь видам, которые не понимают родственных отношений денобуланцев. Имена часто короткие и звучные, особенно мужские.",
     "Species.denobulan.description": "Денобуланцы родом с планеты Денобула. Они от природы общительны и любознательны. Союзники человечества с 2130-х годов. Денобула очень быстро присоединилась к Федерации, хоть и не была одной из её основателей. Это социально активный вид с характерными выразительными чертами лица, привыкший к близким общественным отношениям, с большими и сложно устроенными семьями. У денобуланца может быть несколько супругов, у каждого из которых несколько собственных партнёров и десятки общих детей. Они интеллектуальны, любознательны, проницательны и интересуются разными философскими теориями, хотя из-за природной склонности к науке, многодетных семей и общественной направленности немногие из них отваживаются улететь далеко от родной планеты.",
     "Species.denobulan.exampleValue": "Безопасность в количестве",
+    "Species.denobulan.soloDescription": "Общительный, любознательный народ, объединившийся с человечеством с 2130-х годов. Часто легко сходятся с новыми культурами и сотрудничают внутри больших социальных групп. Крепкая физиология, внешне похожа на человека, с гребнями на лице.",
     "Species.denobulan.traitDescription": "Денобуланцы обладают крепкой иммунной\nсистемой, но уязвимы к различным формам радиационного поражения. Они от природы опытные скалолазы и могут взбираться по отвесным стенам, как некоторые из земных ящериц. У денобуланцев нет потребности во сне, но им нужно каждый год впадать в спячку на несколько дней, иначе они станут дезориентированы.",
 
     "Species.elAurian.name": "Эль-Урианин",
